@@ -15,7 +15,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclInt.h,v 1.127.2.121 2009/08/19 15:09:28 dgp Exp $
+ * RCS: @(#) $Id: tclInt.h,v 1.127.2.122 2009/08/24 19:34:05 dgp Exp $
  */
 
 #ifndef _TCLINT
@@ -4333,9 +4333,7 @@ MODULE_SCOPE void	TclBNInitBignumFromWideUInt(mp_int *bignum,
 #if defined(PURIFY) && defined(__clang__) && !defined(CLANG_ASSERT)
 #include <assert.h>
 #define CLANG_ASSERT(x) assert(x)
-#define TclPanic Tcl_Panic
-#undef Tcl_Panic
-#define Tcl_Panic(f, ...) do { TclPanic(f,##__VA_ARGS__); CLANG_ASSERT(0); } while(0)
+EXTERN void Tcl_Panic(const char * format, ...) __attribute__((analyzer_noreturn));
 #elif !defined(CLANG_ASSERT)
 #define CLANG_ASSERT(x)
 #endif
